// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`interface files > compiles a module with an interface file 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=3]",
  "    build.parse[dirty_modules=3]",
  "      build.parse_file[module=App, package=@rewatch-test/app]",
  "      build.parse_file[module=Library, package=@rewatch-test/library]",
  "      build.parse_file[module=Library, package=@rewatch-test/library]",
  "      build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`interface files > reports error when implementation is renamed but interface remains 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=3]",
  "    build.parse[dirty_modules=3]",
  "      build.parse_file[module=App, package=@rewatch-test/app]",
  "      build.parse_file[module=Library, package=@rewatch-test/library]",
  "      build.parse_file[module=Library, package=@rewatch-test/library]",
  "      build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=3]",
  "    build.parse[dirty_modules=1]",
  "      build.parse_file[module=LibRenamed, package=@rewatch-test/library]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "    build.compile_error",
  "build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=LibRenamed, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`interface files > reports error when interface does not match implementation 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=3]",
  "    build.parse[dirty_modules=3]",
  "      build.parse_file[module=App, package=@rewatch-test/app]",
  "      build.parse_file[module=Library, package=@rewatch-test/library]",
  "      build.parse_file[module=Library, package=@rewatch-test/library]",
  "      build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "    build.compile_error",
]
`;

exports[`interface files > reports error when interface file has no implementation 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=3]",
  "    build.parse[dirty_modules=3]",
  "      build.parse_file[module=App, package=@rewatch-test/app]",
  "      build.parse_file[module=Library, package=@rewatch-test/library]",
  "      build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`module operations > cleans up old artifacts when a file is renamed 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=4]",
  "    build.parse[dirty_modules=4]",
  "      build.parse_file[module=App, package=@rewatch-test/app]",
  "      build.parse_file[module=Helper, package=@rewatch-test/library]",
  "      build.parse_file[module=Library, package=@rewatch-test/library]",
  "      build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "build.compile_file[module=Helper, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=4]",
  "    build.parse[dirty_modules=1]",
  "      build.parse_file[module=HelperRenamed, package=@rewatch-test/library]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=HelperRenamed, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`module operations > detects duplicate module names 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
]
`;

exports[`module operations > reports error when renaming a file that has dependents 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=3]",
  "    build.parse[dirty_modules=3]",
  "      build.parse_file[module=App, package=@rewatch-test/app]",
  "      build.parse_file[module=Library, package=@rewatch-test/library]",
  "      build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=3]",
  "    build.parse[dirty_modules=1]",
  "      build.parse_file[module=LibRenamed, package=@rewatch-test/library]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "    build.compile_error",
  "build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=LibRenamed, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
]
`;
